<resources>
    <string name="app_name">KotlinStarter</string>
    <string name="generate_text">Open Curtain</string>
    <string name="some_is_coming">Some is coming...</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="load_screen">Load List</string>
    <string name="btn_back">zurück</string>
    <string name="list_screen_welcome">Welcome to the Superhero List Screen</string>
</resources>