<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.manuelwenner.kotlinstarter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.manuelwenner.kotlinstarter.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_dashboardDetailFragment"
            app:destination="@id/dashboardDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="de.manuelwenner.kotlinstarter.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">

    </fragment>
    <fragment
        android:id="@+id/dashboardDetailFragment"
        android:name="de.manuelwenner.kotlinstarter.DashboardDetailFragment"
        android:label="fragment_dashboard_detail"
        tools:layout="@layout/fragment_dashboard_detail" >
        <argument
            android:name="hero"
            app:argType="string" />
    </fragment>
</navigation>